fix link spacing

--- a/styles/base.css
+++ b/styles/base.css
@@ -95,7 +95,7 @@ p {
 
 .card li {
   list-style: none;
-  margin: 10px;
+  margin: 12px;
 }
 
 .inside {
